--- a/src/assets/assetsrest/scss/style.css
+++ b/src/assets/assetsrest/scss/style.css
@@ -39,7 +39,7 @@ Table of content
   --oneuiux-theme-color-grad-2: #4f77fb;
   --oneuiux-theme-color-grad-3: #6528cf;
   /* color schemes */
-  --oneuiux-theme-color: #0d6efd;
+  --oneuiux-theme-color: #012a60;
   --oneuiux-theme-text: #ffffff;
   --oneuiux-theme-text-primary: #000000;
   --oneuiux-theme-text-secondary: #999999;
@@ -178,7 +178,7 @@ Table of content
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 :root {
-  --bs-blue: #0d6efd;
+  --bs-blue: #012a60;
   --bs-indigo: #6610f2;
   --bs-purple: #6f42c1;
   --bs-pink: #E50A8E;
@@ -200,7 +200,7 @@ Table of content
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #0d6efd;
+  --bs-primary: #012a60;
   --bs-secondary: #6c757d;
   --bs-success: #21E985;
   --bs-info: #00C2FF;
@@ -402,7 +402,7 @@ sup {
 }
 
 a {
-  color: #0d6efd;
+  color: #012a60;
   text-decoration: underline;
 }
 a:hover {
@@ -2672,8 +2672,8 @@ textarea.form-control-lg {
   box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
 }
 .form-check-input:checked {
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: #012a60;
+  border-color: #012a60;
 }
 .form-check-input:checked[type=checkbox] {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e");
@@ -2682,8 +2682,8 @@ textarea.form-control-lg {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: #012a60;
+  border-color: #012a60;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -2760,7 +2760,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #0d6efd;
+  background-color: #012a60;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2789,7 +2789,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #0d6efd;
+  background-color: #012a60;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3198,8 +3198,8 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: #012a60;
+  border-color: #012a60;
 }
 .btn-primary:hover {
   color: #fff;
@@ -3222,8 +3222,8 @@ textarea.form-control-lg {
 }
 .btn-primary:disabled, .btn-primary.disabled {
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: #012a60;
+  border-color: #012a60;
 }
 
 .btn-secondary {
@@ -3437,27 +3437,27 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-  color: #0d6efd;
-  border-color: #0d6efd;
+  color: #012a60;
+  border-color: #012a60;
 }
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: #012a60;
+  border-color: #012a60;
 }
 .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
   box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.5);
 }
 .btn-check:checked + .btn-outline-primary, .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: #012a60;
+  border-color: #012a60;
 }
 .btn-check:checked + .btn-outline-primary:focus, .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
   box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.5);
 }
 .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-  color: #0d6efd;
+  color: #012a60;
   background-color: transparent;
 }
 
@@ -3638,7 +3638,7 @@ textarea.form-control-lg {
 
 .btn-link {
   font-weight: 400;
-  color: #0d6efd;
+  color: #012a60;
   text-decoration: underline;
 }
 .btn-link:hover {
@@ -3947,7 +3947,7 @@ textarea.form-control-lg {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #0d6efd;
+  background-color: #012a60;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #adb5bd;
@@ -3988,7 +3988,7 @@ textarea.form-control-lg {
 }
 .dropdown-menu-dark .dropdown-item.active, .dropdown-menu-dark .dropdown-item:active {
   color: #fff;
-  background-color: #0d6efd;
+  background-color: #012a60;
 }
 .dropdown-menu-dark .dropdown-item.disabled, .dropdown-menu-dark .dropdown-item:disabled {
   color: #adb5bd;
@@ -4110,7 +4110,7 @@ textarea.form-control-lg {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #0d6efd;
+  color: #012a60;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -4167,7 +4167,7 @@ textarea.form-control-lg {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #0d6efd;
+  background-color: #012a60;
 }
 
 .nav-fill > .nav-link,
@@ -4971,7 +4971,7 @@ textarea.form-control-lg {
 .page-link {
   position: relative;
   display: block;
-  color: #0d6efd;
+  color: #012a60;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #dee2e6;
@@ -5002,8 +5002,8 @@ textarea.form-control-lg {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: #012a60;
+  border-color: #012a60;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -5199,7 +5199,7 @@ textarea.form-control-lg {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #0d6efd;
+  background-color: #012a60;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -5282,8 +5282,8 @@ textarea.form-control-lg {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background-color: #012a60;
+  border-color: #012a60;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -6601,7 +6601,7 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-  color: #0d6efd;
+  color: #012a60;
 }
 .link-primary:hover, .link-primary:focus {
   color: #0a58ca;
@@ -7054,7 +7054,7 @@ textarea.form-control-lg {
 }
 
 .border-primary {
-  border-color: #0d6efd !important;
+  border-color: #012a60 !important;
 }
 
 .border-secondary {
@@ -11469,7 +11469,7 @@ textarea.form-control-lg {
   --oneuiux-theme-color-grad-2: #4f77fb;
   --oneuiux-theme-color-grad-3: #6528cf;
   /* color schemes */
-  --oneuiux-theme-color: #0d6efd;
+  --oneuiux-theme-color: #012a60;
   --oneuiux-theme-text: #ffffff;
   --oneuiux-theme-text-primary: #000000;
   --oneuiux-theme-text-secondary: #999999;
@@ -12397,7 +12397,7 @@ main.bg-3 {
 
 /* theme color */
 .bg-blue {
-  background-color: #0d6efd;
+  background-color: #012a60;
 }
 
 .bg-indigo {
@@ -14304,7 +14304,7 @@ a.card {
   --oneuiux-sidebar: var(--oneuiux-theme-color);
   --oneuiux-page-text: #ffffff;
   --oneuiux-page-link: var(--oneuiux-theme-color);
-  --oneuiux-theme-color: #0d6efd;
+  --oneuiux-theme-color: #012a60;
   --oneuiux-theme-link: #438cfa;
   --oneuiux-header-active: #044fc0;
   --oneuiux-footer: #044fc0;
@@ -14959,17 +14959,17 @@ a.card {
   border-top: 13px solid #f03d4f;
 }
 .taglabel.taglabel-primary {
-  background-color: #0d6efd;
+  background-color: #012a60;
 }
 .taglabel.taglabel-primary:after {
   border-top: 13px solid transparent;
   border-left: 13px solid transparent;
-  border-bottom: 13px solid #0d6efd;
+  border-bottom: 13px solid #012a60;
 }
 .taglabel.taglabel-primary:before {
   border-bottom: 13px solid transparent;
   border-left: 13px solid transparent;
-  border-top: 13px solid #0d6efd;
+  border-top: 13px solid #012a60;
 }
 .taglabel.taglabel-secondary {
   background-color: #0e0c0c;
