zona franca de iquique

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
                             </figure>
                         </div>
                         <div class="col px-0 align-self-center">
-                            <h5 class="mb-2">John Winsels</h5>      <a class="nav-link" (click)="colorChange('azul')" [hidden]="color!='naranja'" tabindex="-1" >
+                            <h5 class="mb-2">Zona Franca de Iquique</h5>      <a class="nav-link" (click)="colorChange('azul')" [hidden]="color!='naranja'" tabindex="-1" >
                               
                                 <div class="col"> <i class="bi bi-star-fill text-info small"></i></div>
                             </a>
