--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -14,10 +14,11 @@
                     </div>
                 </div>
                 <div class="col-auto">
-                    <a href="notifications.html" target="_self" class="btn btn-default btn-44 btn-rounded">
+                   <!--  <a href="notifications.html" target="_self" class="btn btn-default btn-44 btn-rounded">
                         <i class="bi bi-bell"></i>
                         <span class="count-indicator"></span>
-                    </a>
+                    </a> -->
+                    <button _ngcontent-hnp-c75="" class="btn btn-light btn-44 filter-btn" (click)="openFilter"><i _ngcontent-hnp-c75="" class="bi bi-search size-22"></i></button>
                     <a href="profile.html" target="_self" class="btn btn-default btn-44 btn-rounded ms-2">
                         <i class="bi bi-person-circle"></i>
                     </a>
