--- a/src/app/components/pages/restaurant/restaurant.component.html
+++ b/src/app/components/pages/restaurant/restaurant.component.html
@@ -73,7 +73,82 @@
             <div class="row mb-4">
                 <div class="col-12 px-0">
                     <!-- swiper categories -->
-                    <div class="swiper-container connectionwiper">
+                     <swiper [config]="config">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide " >
+                                <a class="card text-center bg-theme text-white">
+                                    <div class="card-body p-1">
+                                        <div class="position-absolute end-0 top-0 bg-success z-index-1 online-status">
+                                        </div>
+                                        <figure class="avatar avatar-90 rounded-15 mb-1 coverimg">
+                                            <img src="assets/assetsrest/img/intro6.jpg" alt="" alt="">
+                                        </figure>
+                                         <p class="text-center size-12"><small class="text-muted">Burger</small><br />$ 41.00</p>
+                                    </div>
+                                </a>                               
+                            </div>
+                            <div class="swiper-slide " >
+                                <a class="card text-center bg-theme text-white">
+                                    <div class="card-body p-1">
+                                        <div class="position-absolute end-0 top-0 bg-success z-index-1 online-status">
+                                        </div>
+                                        <figure class="avatar avatar-90 rounded-15 mb-1 coverimg">
+                                            <img src="assets/assetsrest/img/intro5.jpg" alt="" alt="">
+                                        </figure>
+                                         <p class="text-center size-12"><small class="text-muted">Burger</small><br />$ 41.00</p>
+                                    </div>
+                                </a>                               
+                            </div>
+                            <div class="swiper-slide " >
+                                <a class="card text-center bg-theme text-white">
+                                    <div class="card-body p-1">
+                                        <div class="position-absolute end-0 top-0 bg-success z-index-1 online-status">
+                                        </div>
+                                        <figure class="avatar avatar-90 rounded-15 mb-1 coverimg">
+                                            <img src="assets/assetsrest/img/intro3.jpg" alt="" alt="">
+                                        </figure>
+                                         <p class="text-center size-12"><small class="text-muted">Burger</small><br />$ 41.00</p>
+                                    </div>
+                                </a>                               
+                            </div>
+                           <div class="swiper-slide " >
+                                <a class="card text-center bg-theme text-white">
+                                    <div class="card-body p-1">
+                                        <div class="position-absolute end-0 top-0 bg-success z-index-1 online-status">
+                                        </div>
+                                        <figure class="avatar avatar-90 rounded-15 mb-1 coverimg">
+                                            <img src="assets/assetsrest/img/intro4.jpg" alt="" alt="">
+                                        </figure>
+                                         <p class="text-center size-12"><small class="text-muted">Burger</small><br />$ 41.00</p>
+                                    </div>
+                                </a>                               
+                            </div>
+                           <div class="swiper-slide " >
+                                <a class="card text-center bg-theme text-white">
+                                    <div class="card-body p-1">
+                                        <div class="position-absolute end-0 top-0 bg-success z-index-1 online-status">
+                                        </div>
+                                        <figure class="avatar avatar-90 rounded-15 mb-1 coverimg">
+                                            <img src="assets/assetsrest/img/intro2.jpg" alt="" alt="">
+                                        </figure>
+                                         <p class="text-center size-12"><small class="text-muted">Burger</small><br />$ 41.00</p>
+                                    </div>
+                                </a>                               
+                            </div>
+                           
+                    
+                        </div>
+                    
+                    <!-- Add Pagination -->
+                        <div class="swiper-pagination"></div>
+                        
+                        <!-- Add Arrows -->
+                    <!--  <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div> -->
+                    </swiper>
+
+
+                   <!--  <div class="swiper-container connectionwiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide text-center">
                                 <a href="product.html" class="card text-center bg-theme text-white">
@@ -130,7 +205,7 @@
                             </div>
 
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
