--- a/src/app/components/pages/restaurant/restaurant.component.html
+++ b/src/app/components/pages/restaurant/restaurant.component.html
@@ -1,75 +1,10 @@
     <!-- main page content -->
         <div class="main-container container">
 
-            <!-- search -->
+        
+    
 
-
-            <!--categories -->
-            <div class="row mb-3">
-                <div class="col-12 px-0">
-                    <!-- swiper categories -->
-                    <div class="swiper-container connectionwiper">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide text-center">
-                                <a href="products.html" class="card text-center mb-2">
-                                    <div class="card-body p-1">
-                                        <figure class="avatar avatar-80 rounded-18 coverimg">
-                                            <img src="assets/assetsrest/img/intro4.jpg" alt="">
-                                        </figure>
-                                    </div>
-                                </a>
-                                <p class="size-10 text-secondary">Breakfast</p>
-                            </div>
-
-                            <div class="swiper-slide text-center">
-                                <a href="products.html" class="card text-center mb-2">
-                                    <div class="card-body p-1">
-                                        <figure class="avatar avatar-80 rounded-20 coverimg">
-                                            <img src="assets/assetsrest/img/intro1.jpg" alt="">
-                                        </figure>
-                                    </div>
-                                </a>
-                                <p class="size-10 text-secondary">Lunch</p>
-                            </div>
-
-                            <div class="swiper-slide text-center">
-                                <a href="products.html" class="card text-center mb-2">
-                                    <div class="card-body p-1">
-                                        <figure class="avatar avatar-80 rounded-20 coverimg">
-                                            <img src="assets/assetsrest/img/intro2.jpg" alt="">
-                                        </figure>
-                                    </div>
-                                </a>
-                                <p class="size-10 text-secondary">Dinner</p>
-                            </div>
-
-                            <div class="swiper-slide text-center">
-                                <a href="products.html" class="card text-center mb-2">
-                                    <div class="card-body p-1">
-                                        <figure class="avatar avatar-80 rounded-20 coverimg">
-                                            <img src="assets/assetsrest/img/intro3.jpg" alt="">
-                                        </figure>
-                                    </div>
-                                </a>
-                                <p class="size-10 text-secondary">Fastfood</p>
-                            </div>
-                            <div class="swiper-slide text-center">
-                                <a href="products.html" class="card text-center mb-2">
-                                    <div class="card-body p-1">
-                                        <figure class="avatar avatar-80 rounded-20 coverimg">
-                                            <img src="assets/assetsrest/img/intro4.jpg" alt="">
-                                        </figure>
-                                    </div>
-                                </a>
-                                <p class="size-10 text-secondary">All</p>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!--products -->
+            <!--partners -->
             <div class="row mb-4">
                 <div class="col-12 px-0">
                     <!-- swiper categories -->
@@ -80,7 +15,7 @@
                                     <div class="card-body p-1">
                                         <div class="position-absolute end-0 top-0 bg-success z-index-1 online-status">
                                         </div>
-                                        <figure class="avatar avatar-90 rounded-15 mb-1 coverimg">
+                                        <figure class="avatar avatar-60 rounded-15 mb-1 coverimg">
                                             <img src="assets/assetsrest/img/intro6.jpg" alt="" alt="">
                                         </figure>
                                          <p class="text-center size-12"><small class="text-muted">Burger</small><br />$ 41.00</p>
@@ -92,7 +27,7 @@
                                     <div class="card-body p-1">
                                         <div class="position-absolute end-0 top-0 bg-success z-index-1 online-status">
                                         </div>
-                                        <figure class="avatar avatar-90 rounded-15 mb-1 coverimg">
+                                        <figure class="avatar avatar-60 rounded-15 mb-1 coverimg">
                                             <img src="assets/assetsrest/img/intro5.jpg" alt="" alt="">
                                         </figure>
                                          <p class="text-center size-12"><small class="text-muted">Burger</small><br />$ 41.00</p>
@@ -104,39 +39,61 @@
                                     <div class="card-body p-1">
                                         <div class="position-absolute end-0 top-0 bg-success z-index-1 online-status">
                                         </div>
-                                        <figure class="avatar avatar-90 rounded-15 mb-1 coverimg">
+                                        <figure class="avatar avatar-60 rounded-15 mb-1 coverimg">
                                             <img src="assets/assetsrest/img/intro3.jpg" alt="" alt="">
                                         </figure>
                                          <p class="text-center size-12"><small class="text-muted">Burger</small><br />$ 41.00</p>
                                     </div>
                                 </a>                               
                             </div>
-                           <div class="swiper-slide " >
+                            <div class="swiper-slide " >
                                 <a class="card text-center bg-theme text-white">
                                     <div class="card-body p-1">
                                         <div class="position-absolute end-0 top-0 bg-success z-index-1 online-status">
                                         </div>
-                                        <figure class="avatar avatar-90 rounded-15 mb-1 coverimg">
+                                        <figure class="avatar avatar-60 rounded-15 mb-1 coverimg">
                                             <img src="assets/assetsrest/img/intro4.jpg" alt="" alt="">
                                         </figure>
                                          <p class="text-center size-12"><small class="text-muted">Burger</small><br />$ 41.00</p>
                                     </div>
                                 </a>                               
                             </div>
-                           <div class="swiper-slide " >
+                            <div class="swiper-slide " >
                                 <a class="card text-center bg-theme text-white">
                                     <div class="card-body p-1">
                                         <div class="position-absolute end-0 top-0 bg-success z-index-1 online-status">
                                         </div>
-                                        <figure class="avatar avatar-90 rounded-15 mb-1 coverimg">
+                                        <figure class="avatar avatar-60 rounded-15 mb-1 coverimg">
                                             <img src="assets/assetsrest/img/intro2.jpg" alt="" alt="">
                                         </figure>
                                          <p class="text-center size-12"><small class="text-muted">Burger</small><br />$ 41.00</p>
                                     </div>
                                 </a>                               
                             </div>
-                           
-                    
+                            <div class="swiper-slide " >
+                                <a class="card text-center bg-theme text-white">
+                                    <div class="card-body p-1">
+                                        <div class="position-absolute end-0 top-0 bg-success z-index-1 online-status">
+                                        </div>
+                                        <figure class="avatar avatar-60 rounded-15 mb-1 coverimg">
+                                            <img src="assets/assetsrest/img/intro4.jpg" alt="" alt="">
+                                        </figure>
+                                         <p class="text-center size-12"><small class="text-muted">Burger</small><br />$ 41.00</p>
+                                    </div>
+                                </a>                               
+                            </div>
+                            <div class="swiper-slide " >
+                                <a class="card text-center bg-theme text-white">
+                                    <div class="card-body p-1">
+                                        <div class="position-absolute end-0 top-0 bg-success z-index-1 online-status">
+                                        </div>
+                                        <figure class="avatar avatar-60 rounded-15 mb-1 coverimg">
+                                            <img src="assets/assetsrest/img/intro2.jpg" alt="" alt="">
+                                        </figure>
+                                         <p class="text-center size-12"><small class="text-muted">Burger</small><br />$ 41.00</p>
+                                    </div>
+                                </a>                               
+                            </div>
                         </div>
                     
                     <!-- Add Pagination -->
