--- a/src/assets/assetsrest/scss/style.css
+++ b/src/assets/assetsrest/scss/style.css
@@ -7120,6 +7120,9 @@ textarea.form-control-lg {
 .w-75 {
   width: 75% !important;
 }
+.w-60 {
+  width: 60% !important;
+}
 
 .w-100 {
   width: 100% !important;
