--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -8,7 +8,7 @@
                     </button>
                 </div>
                 <div class="col">
-                    <div class="">
+                    <div class="" [routerLink]="['/']">
                         <img src="assets/assetsrest/img/logo.png" alt="" class="" style="width: 180px;" /><!-- 
                         <h5>OneUIUX<br /><span class="text-muted fw-light">Foodies</span></h5> -->
                     </div>
