--- a/src/app/components/pages/detail/detail.component.html
+++ b/src/app/components/pages/detail/detail.component.html
@@ -1,37 +1,37 @@
 <div class="main-container container">
     <div class="row">
         <div class="col-12 px-0 position-relative">
-            <div class="swiper-container cardswiper">
+            <!-- <div class="swiper-container cardswiper">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">
+                    <div class="swiper-slide"  *ngFor='let image of _butler.preview.images; let i = index' >
                         <div class="card shadow-sm mb-3">
                             <div class="card-body">
-                                <img src="assets/img/categories1.png" alt="" class="w-100 rounded-15">
+                                <img src="{{image}}" alt="" class="w-100 rounded-15">
                             </div>
                         </div>
                     </div>
 
-                    <div class="swiper-slide">
-                        <div class="card shadow-sm mb-3">
-                            <div class="card-body">
-                                <img src="assets/img/categories1.png" alt="" class="w-100 rounded-15">
-                            </div>
-                        </div>
-                    </div>
+                </div> 
+            </div> -->
+             <swiper [config]="config">
 
-                    <div class="swiper-slide">
+                <div class="swiper-wrapper">
+                    
+                        <div class="swiper-slide"  *ngFor='let image of _butler.preview.images; let i = index' >
                         <div class="card shadow-sm mb-3">
                             <div class="card-body">
-                                <img src="assets/img/categories1.png" alt="" class="w-100 rounded-15">
+                                <img src="{{image}}" alt="" class=" rounded-15">
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
+                    </div>                              
+                   
+                </div>                    
+                <div class="swiper-pagination"></div>
+            </swiper>
         </div>
     </div>
 
-    <div class="row mb-2">
+<!--     <div class="row mb-2">
         <div class="col">
             <p class="text-secondary small">Electronics </p>
 
@@ -42,11 +42,13 @@
                 <i class="bi bi-star-fill text-warning"></i>
             </p>
         </div>
-    </div>
+    </div> -->
     <h4 class="mb-2">{{_butler.preview.name}}</h4>
     <div class="row mb-3">
         <div class="col align-self-center">
-            <h5>$ 524.00 <s class="small text-secondary fw-light">$ 650.00</s></h5>
+            <h5>$ {{_butler.preview.price}}
+                <!-- <s class="small text-secondary fw-light">$ 650.00</s> -->
+            </h5>
         </div>
         <div class="col-auto">
             <div class="counter-number">
@@ -61,7 +63,7 @@
         </div>
     </div>
 
-    <div class="row">
+ <!--    <div class="row">
         <div class="col-12">
             <div class="card bg-opac-50 shadow-sm mb-4">
                 <div class="card-body">
@@ -85,33 +87,31 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="row mb-4">
         <div class="col">
-            <a href="cart.html" class="btn btn-default btn-lg shadow-sm w-100 btn-rounded">Add to Cart</a>
+            <a href="cart.html" class="btn btn-default btn-lg shadow-sm w-100 btn-rounded">Agregar al carro</a>
         </div>
         <div class="col">
-            <a href="cart.html" class="btn btn-success btn-lg shadow-sm w-100 text-white btn-rounded">Buy
-                Now</a>
+            <a href="cart.html" class="btn btn-success btn-lg shadow-sm w-100 text-white btn-rounded">Comprar ahora</a>
         </div>
     </div>
 
-    <h5 class="mb-3">Product Description</h5>
-    <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sollicitudin
+    <h5 class="mb-3">Descripcion</h5>
+    <p class="text-secondary">{{_butler.preview.description}}.</p>
+<!--     <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sollicitudin
         dignissim nisi, eget malesuada ligula ultricies sit amet. Suspendisse efficitur ex eu est placerat
-        mattis.</p>
-    <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sollicitudin
-        dignissim nisi, eget malesuada ligula ultricies sit amet. Suspendisse efficitur ex eu est placerat
-        mattis.</p>
+        mattis.
+    </p> -->
 
     <br />
-    <p class="text-secondary small">** Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
+    <!-- <p class="text-secondary small">** Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque
         sollicitudin dignissim nisi, eget malesuada ligula ultricies sit amet. Suspendisse efficitur ex eu est
         placerat mattis.</p>
-    <br />
+    <br /> -->
 
-    <div class="row mb-3">
+   <!--  <div class="row mb-3">
 
         <div class="col-12 text-center mb-3">
             <button class="btn btn-sm btn-outline-info me-2 btn-rounded" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
@@ -131,13 +131,13 @@
             </div>
         </div>
     </div>
-
-    <div class="row mb-3">
+ -->
+<!--     <div class="row mb-3">
         <div class="col">
             <h6 class="title">Related Products</h6>
         </div>
-    </div>
-
+    </div> -->
+<!-- 
     <div class="row mb-3">
         <div class="col-12 px-0">
             <div class="swiper-container connectionwiper">
@@ -198,5 +198,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
