--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -165,42 +165,47 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="index.html">
                         <span>
-                            <i class="nav-icon bi bi-house"></i>
-                            <span class="nav-text">Home</span>
+                            <!-- <i class="nav-icon bi bi-package"></i> -->
+                          <span class="material-symbols-outlined">
+                          view_in_ar_new
+                          </span>
+                            <span class="nav-text">Autopartes</span>
                         </span>
                     </a>
                 </li>
-                <li class="nav-item">
+              <!--   <li class="nav-item">
                     <a class="nav-link" href="stats.html">
                         <span>
                             <i class="nav-icon bi bi-binoculars"></i>
                             <span class="nav-text">Statistics</span>
                         </span>
                     </a>
-                </li>
+                </li> -->
                 <li class="nav-item centerbutton">
                     <a href="cart.html" class="nav-link" id="centermenubtn">
                         <span class="theme-linear-gradient">
-                            <i class="bi bi-basket size-22"></i>
+                            <i class="bi bi-cart-fill size-22"></i>
                         </span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="myorders.html">
                         <span>
-                            <i class="nav-icon bi bi-bag"></i>
-                            <span class="nav-text">Orders</span>
+                            <span class="material-symbols-outlined">
+                            local_car_wash
+                            </span>
+                            <span class="nav-text">Vehiculos</span>
                         </span>
                     </a>
                 </li>
-                <li class="nav-item">
+               <!--  <li class="nav-item">
                     <a class="nav-link" href="wallet.html">
                         <span>
                             <i class="nav-icon bi bi-wallet2"></i>
                             <span class="nav-text">Wallet</span>
                         </span>
                     </a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </footer>
