--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -218,7 +218,7 @@
                 <div class="row">
                     <div class="col align-self-center">
                         <h6 class="mb-0">Busqueda avanzada</h6>
-                        <p class="text-secondary small">2154 products</p>
+                        <p class="text-secondary small">0 productos</p>
                     </div>
                     <div class="col-auto px-0">
                         <button class="btn btn-link text-danger filter-close">
@@ -233,7 +233,7 @@
                     <label for="input-select">Buscar...</label>
                 </div>
                 <div class="mb-4">
-                    <h6>Select Range</h6>
+                    <h6>Rango de precio</h6>
                     <div id="rangeslider" class="mt-4"></div>
                 </div>
 
@@ -241,49 +241,62 @@
                     <div class="col">
                         <div class="form-floating">
                             <input type="number" class="form-control" min="0" max="500" value="100" step="1" id="input-select">
-                            <label for="input-select">Minimum</label>
+                            <label for="input-select">Minimo</label>
                         </div>
                     </div>
                     <div class="col-auto align-self-center"> to </div>
                     <div class="col">
                         <div class="form-floating">
                             <input type="number" class="form-control" min="0" max="500" value="200" step="1" id="input-number">
-                            <label for="input-number">Maximum</label>
+                            <label for="input-number">Maximo</label>
                         </div>
                     </div>
                 </div>
 
                 <div class="form-floating mb-4">
                     <select class="form-control" id="filtertype">
-                        <option selected>Veg</option>
-                        <option>Non-Veg</option>
-                        <option>Both</option>
+                        <option selected>camion</option>
+                        <option>camioneta</option>
+                        <option>citycar</option>
+                        <option>deportivo</option>
+                        <option>furgon</option>
+                        <option>maquinaria</option>
+                        <option>microbus / bus</option>
+                        <option>pickup</option>
+                        <option>station wagon</option>
+                        <option>SUV</option>
                     </select>
-                    <label for="filtertype">Select Shopping Type</label>
+                    <label for="filtertype">Tipo de vehiculo</label>
                 </div>
 
                 <div class="form-group floating-form-group active mb-4">
-                    <h6 class="mb-3">Select Facilities</h6>
+                    <h6 class="mb-3">Tipo de combustible</h6>
 
                     <div class="form-check form-switch mb-2">
                         <input type="checkbox" class="form-check-input" id="one" checked>
-                        <label class="form-check-label" for="one">Lunch</label>
+                        <label class="form-check-label" for="one">bencina</label>
                     </div>
                     <div class="form-check form-switch mb-2">
                         <input type="checkbox" class="form-check-input" id="two" checked>
-                        <label class="form-check-label" for="two">Dinner</label>
+                        <label class="form-check-label" for="two">diesel</label>
                     </div>
+                     <h6 class="mb-3">Tipo de transmision</h6>
                     <div class="form-check form-switch mb-2">
                         <input type="checkbox" class="form-check-input" id="three">
-                        <label class="form-check-label" for="three">Breckfast</label>
+                        <label class="form-check-label" for="three">manual</label>
                     </div>
                     <div class="form-check form-switch mb-2">
                         <input type="checkbox" class="form-check-input" id="four">
-                        <label class="form-check-label" for="four">Drinks</label>
+                        <label class="form-check-label" for="four">automatica</label>
                     </div>
+                     <h6 class="mb-3">Estado del vehiculo</h6>
                     <div class="form-check form-switch mb-2">
                         <input type="checkbox" class="form-check-input" id="five">
-                        <label class="form-check-label" for="five">FastFood</label>
+                        <label class="form-check-label" for="five">nuevo</label>
+                    </div>
+                    <div class="form-check form-switch mb-2">
+                        <input type="checkbox" class="form-check-input" id="six">
+                        <label class="form-check-label" for="six">usado</label>
                     </div>
                 </div>
 
