--- a/src/app/components/pages/welcome/welcome.component.html
+++ b/src/app/components/pages/welcome/welcome.component.html
@@ -40,7 +40,7 @@
         </div>
     </div>
  
-    <div class="row mb-4 g-0 ">
+    <div class="row mb-4 g-0 " [hidden]="_butler.viewSelected=='cars'">
         <div class="col-12">
             <div class="card">
                 <div class="card-body p-0">
@@ -63,6 +63,43 @@
                                 <div class="row">
                                     <div class="col">
                                         <p class="small"><small class="text-muted size-12">{{part.name}}</small><br />${{part.price}}</p>
+                                    </div>
+                                    <div class="col-auto px-0">
+                                        <button class="btn btn-sm btn-link text-color-theme">
+                                            <i class="bi bi-bag-plus"></i>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>                       
+                    </div>              
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row mb-4 g-0 " [hidden]="_butler.viewSelected=='parts'">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-body p-0">
+                    <div class="row mx-0">
+                        <div class="col-6 col-md-4 col-lg-3 border-end p-3" *ngFor='let car of cars$; let i = index' (click)="setPreview(car)" >
+                            <div class="position-relative">
+                                <div class="position-absolute start-0 top-0 z-index-1">
+                                    <div class="tag tag-small bg-theme text-white">
+                                        26% OFF
+                                    </div>
+                                </div>
+                                <div class="position-absolute end-0 top-0 z-index-1 ">
+                                    <button class="btn btn-sm btn-26 roudned-circle shadow-sm shadow-danger text-danger">
+                                        <i class="bi bi-heart size-10 vm"></i>
+                                    </button>
+                                </div>
+                                <figure class="avatar w-100 rounded-15 h-140 mb-3 coverimg">
+                                    <img src="{{car.images[0]}}" alt="" class="w-100">
+                                </figure>
+                                <div class="row">
+                                    <div class="col">
+                                        <p class="small"><small class="text-muted size-12">{{car.name}}</small><br />${{car.price}}</p>
                                     </div>
                                     <div class="col-auto px-0">
                                         <button class="btn btn-sm btn-link text-color-theme">
