--- a/src/app/components/pages/welcome/welcome.component.html
+++ b/src/app/components/pages/welcome/welcome.component.html
@@ -82,7 +82,7 @@
             <div class="card">
                 <div class="card-body p-0">
                     <div class="row mx-0">
-                        <div class="col-6 col-md-4 col-lg-3 border-end p-3" *ngFor='let car of cars$; let i = index' (click)="setPreview(car)" >
+                        <div class="col-6 col-md-4 col-lg-3 border-end p-3" *ngFor='let car of _butler.cars$; let i = index' (click)="setPreview(car)" >
                             <div class="position-relative">
                                 <div class="position-absolute start-0 top-0 z-index-1">
                                     <div class="tag tag-small bg-theme text-white">
