--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -275,12 +275,12 @@
                     <h6 class="mb-3">Tipo de combustible</h6>
 
                     <div class="form-check form-switch mb-2">
-                        <input type="checkbox" class="form-check-input" id="one" checked   >
-                        <label class="form-check-label" for="one"  (click)="setFuelType('Bencina')">bencina</label>
+                        <input type="checkbox" class="form-check-input"  checked     (click)="setFuelType('Bencina')" >
+                        <label class="form-check-label"   >bencina</label>
                     </div>
-                    <div class="form-check form-switch mb-2">
-                        <input type="checkbox" class="form-check-input" id="two" checked  >
-                        <label class="form-check-label" for="two" (click)="setFuelType('Diesel')">diesel</label>
+                    <div class="form-check form-switch mb-2" >
+                        <input type="checkbox" class="form-check-input"  checked  (click)="setFuelType('Diesel')">
+                        <label class="form-check-label">diesel</label>
                     </div>
                      <h6 class="mb-3">Tipo de transmision</h6>
                     <div class="form-check form-switch mb-2">
