--- a/src/app/components/pages/welcome/welcome.component.html
+++ b/src/app/components/pages/welcome/welcome.component.html
@@ -86,7 +86,7 @@
                             <div class="position-relative">
                                 <div class="position-absolute start-0 top-0 z-index-1">
                                     <div class="tag tag-small bg-theme text-white">
-                                        26% OFF
+                                        {{car.vehicleStatus.name}}
                                     </div>
                                 </div>
                                 <div class="position-absolute end-0 top-0 z-index-1 ">
