new/used, fuelType and transmisionType info

--- a/src/app/components/pages/welcome/welcome.component.html
+++ b/src/app/components/pages/welcome/welcome.component.html
@@ -105,7 +105,7 @@
                                         <p class="small">
                                             <small class="text-muted size-12">{{car.name}}</small>
                                             <br />
-                                            Transmision: {{car.transmision.name}}
+                                            {{car.transmision.name}}
                                             <br/>
                                             ${{car.price | number :'1.0'}}  
                                         </p>
